--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/myModals.js"></script>
     <script src="js/models/expenses.js"></script>
     <script src="js/models/auth.js"></script>
     <script src="js/models/accounts.js"></script>
