--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/models/auth.js"></script>
     <script src="js/models/accounts.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-resource.min.js"></script>
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
