--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <script src="cordova.js"></script>
 
     <script src="lib/lodash.min.js"></script>
-
+    <script src="lib/angular-local-storage.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
