--- a/www/index.html
+++ b/www/index.html
@@ -23,13 +23,13 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/myModals.js"></script>
+    <script src="js/models/model.js"></script>
+    <script src="js/utilities/myModals.js"></script>
     <script src="js/models/expenses.js"></script>
     <script src="js/models/auth.js"></script>
     <script src="js/models/accounts.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/directives/directives.js"></script>
+    <script src="js/filters/filters.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-resource.min.js"></script>
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
